--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "@tailwindcss/forms": "^0.3.3",
     "date-fns": "^2.11.1",
     "gray-matter": "^4.0.2",
     "next": "^11.0.0",
+    "next-auth": "^3.29.0",
     "nookies": "^2.5.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
